# lava

./: .bzrignore  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .readthedocs.yml  .testr.conf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  HACKING  INSTALL  LICENSE  MANIFEST.in  Makefile  NEWS  Procfile  QUICKSTART  README  README.md  TODO  abrek-ltp-job.json  android-0xbench-job.json  android-basic-job.json  android-monkey-job.json  android-new-kernel.json  api.py  build.sh  changes.rst  ci-run  code.rst  common-requirements.txt  conf.py  coordinator.py  create-devel-db.sh  dispatcher-requirements.txt  entry_points.ini  (+50 more)
.bzr-builddeb/: default.conf
.gitlab-ci/: dispatcher.debian:9.deps  dispatcher.debian:buster.deps  server.debian:buster.deps
apache/: launch-control.conf  launch-control.wsgi
assets.src/: icons.xcf
cfg/: board-cfg.json  lava-server.json
contrib/: install.sh  virtualenv-install.sh
dashboard_app/: __init__.py  admin.py  bread_crumbs.py  context_processors.py  dataview.py  dispatcher.py  extension.py  filters.py  fixtures.py  forms.py  helpers.py  managers.py  models.py  patches.py  signals.py  test_urls.py  test_utils.py  tests.py  urls.py  versiontools.py  views.py  xmlrpc.py
dashboard_server/: __init__.py  apache.conf  context_processors.py  default_settings.py  development_settings.py  local_settings.py.example  manage.py  settings.py  urls.py
debian/: README.Debian  changelog  control  copyright  docs  files  gbp.conf  imx53-01.conf  imx53.json  kvm-health.json  lava-common.dirs  lava-common.install  lava-common.lintian-overrides  lava-coordinator.init  lava-coordinator.install  lava-coordinator.maintscript  lava-coordinator.manpages  lava-dev.docs  lava-dev.install  lava-dev.lintian-overrides  lava-dispatcher-doc.doc-base  lava-dispatcher-doc.install  lava-dispatcher-doc.links  lava-dispatcher-host-server.1  lava-dispatcher-host.1  lava-dispatcher-host.dirs  lava-dispatcher-host.install  lava-dispatcher-host.manpages  lava-dispatcher-host.postinst  lava-dispatcher.conf  lava-dispatcher.default.ex  lava-dispatcher.dirs  lava-dispatcher.install  lava-dispatcher.links  lava-dispatcher.lintian-overrides  lava-dispatcher.manpages  lava-dispatcher.postinst  lava-dispatcher.postrm  lava-dispatcher.py3dist-overrides  lava-docker-worker.1  (+48 more)
demo/: MANIFEST.in  setup.py
demo_app/: admin.py  extension.py  models.py  urls.py
dispatcher/: __init__.py  client.py  config.py
doc/: Makefile  QUICKSTART  abrek-ltp-job.json  android-0xbench-job.json  android-basic-job.json  android-monkey-job.json  android-new-kernel.json  arm_energy_probe.rst  boot-management.rst  bootimages.rst  changes.rst  code.rst  components.rst  conf.py  configuration.rst  cu-ttyUSB0.cf  data-export.rst  debian.rst  debugging.rst  developing-tests.rst  development.rst  device-capabilities.rst  devicetypes.rst  dispatcher-actions.rst  dispatcher-actions2.rst  dispatcher-design.rst  dispatcher-format.rst  dispatcher-testing.rst  distributed-deployment.rst  dummy-deploy.rst  extending.rst  external_measurement.rst  faq.rst  features.rst  filters-reports.rst  glossary.rst  hacking-session.rst  healthchecks.rst  hiddentypes.rst  index.rst  (+74 more)
docker/: .gitlab-ci.yml  README.md  build.sh
etc/: apache  debug.wsgi  dispatcher.yaml  env.yaml  instance.conf.template  lava-celery-worker  lava-celery-worker.service  lava-coordinator  lava-coordinator.conf  lava-coordinator.init  lava-coordinator.service  lava-default.conf  lava-dispatcher-host.service  lava-dispatcher-host.socket  lava-dispatcher-nfs.exports  lava-docker-worker  lava-docker-worker.service  lava-docker-worker@.service  lava-group.init  lava-logs  lava-logs.init  lava-logs.service  lava-master  lava-master.init  lava-master.service  lava-modules.conf  lava-options.conf  lava-publisher  lava-publisher.init  lava-publisher.service  lava-scheduler  lava-scheduler.service  lava-server-gunicorn  lava-server-gunicorn.init  lava-server-gunicorn.service  lava-server.conf  lava-server.gunicorn  lava-server.init  lava-server.service  lava-server.uwsgi.conf  (+11 more)
example_bundles/: big.json  broken.json  source-refs.json  test_result_detail.json
google_analytics/: admin.py  models.py
launch_control/: __init__.py  sample.py  sw_profile.py  utils_json.py
lava/: __init__.py  client.py  config.py  coordinator.py  serial_ctrl.py  settings.py  urls.py
lava-base/: Dockerfile
lava-dispatcher/: Dockerfile  entrypoint.sh
lava-dispatcher-base/: Dockerfile  Dockerfile.tmpl  test.sh
lava-server/: Dockerfile  entrypoint.sh
lava-server-base/: Dockerfile  Dockerfile.tmpl  test.sh
lava_common/: VERSION  compat.py  constants.py  converters.py  decorators.py  device_mappings.py  exceptions.py  jinja.py  log.py  logging_utils.py  timeout.py  utils.py  version.py  worker.py  yaml.py
lava_coordinator/: __init__.py  lava-coordinator
lava_db_generator/: factories.py  tests.py
lava_dispatcher/: README.rst  __init__.py  action.py  android_client.py  android_config.py  android_util.py  bundle.py  client.py  config.py  connection.py  context.py  deployment_data.py  device.py  diagnostics.py  downloader.py  errors.py  ipmi.py  job.py  lava_test_shell.py  log.py  logical.py  master_client.py  namespace_state.py  parser.py  power.py  qemu_client.py  qemu_config.py  runner.py  shell.py  ssh_client.py  ssh_config.py  tarballcache.py  test_data.py  utils.py  worker.py
lava_dispatcher_host/: __init__.py  action.py  client.py  cmdline.py  docker_worker.py  lava-dispatcher-host  lava-dispatcher-host-server  lava-docker-worker  server.py  udev.py  utils.py
lava_group/: __init__.py
lava_markitup/: urls.py  views.py
lava_projects/: __init__.py  admin.py  extension.py  forms.py  models.py  urls.py  views.py
lava_rest_app/: api.py  apps.py  authentication.py  filters.py  tests.py  urls.py  versions.py
lava_results_app/: admin.py  api.py  dbutils.py  extension.py  models.py  results.py  tables.py  urls.py  utils.py  views.py  xmlrpc.py
lava_scheduler_app/: __init__.py  admin.py  api.py  (+27 more)
(+4412 files in other folders)
