# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2025 LAVA contributors

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lava"
dynamic = ["version"]
description = "LAVA is a continuous integration system for deploying operating systems onto physical and virtual hardware for running tests."
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "LAVA team", email = "lava-team@linaro.org"}
]
maintainers = [
    {name = "LAVA team", email = "lava-team@linaro.org"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 6 - Mature",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Framework :: Django",
]
keywords = ["testing", "ci", "continuous-integration", "automation", "embedded", "hardware"]

dependencies = [
    "PyYAML",
    "voluptuous",
    "sentry-sdk",
]

[project.optional-dependencies]
dispatcher = [
    "aiohttp",
    "configobj",
    "python-magic",
    "Jinja2",
    "pexpect",
    "pyudev",
    "requests",
    "setproctitle",
]
server = [
    "asgiref",
    "celery",
    "django-auth-ldap",
    "defusedxml",
    "django-allauth",
    "django-filter",
    "django-tables2",
    "Django>=4.2,<5.0",
    "django-environ",
    "djangorestframework",
    "djangorestframework-filters>=1.0.0.dev2",
    "drf-extensions>=0.8.0",
    "psycopg2-binary",
    "pyzmq",
    "tap.py",
    "more-itertools",
    "junit-xml",
    "whitenoise",
    "gunicorn",
    "Jinja2",
    "requests",
    "aiohttp",
]
dispatcher-host = [
    "Jinja2",
    "requests",
    "pyudev",
]
coordinator = []
full = [
    "lava[dispatcher]",
    "lava[server]",
    "lava[dispatcher-host]",
]
test = [
    "pytest>=7.0",
    "pytest-django",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-random-order",
    "pytest-subtests",
    "responses",
]
dev = [
    "lava[full]",
    "lava[test]",
    "black",
    "isort",
    "pylint",
    "pylint-django",
    "mypy",
    "django-stubs",
    "types-PyYAML",
    "types-requests",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://lavasoftware.org"
Documentation = "https://docs.lavasoftware.org"
Repository = "https://gitlab.com/lava/lava"
Issues = "https://gitlab.com/lava/lava/-/issues"

[project.scripts]
lava-server = "manage:main"

[tool.setuptools_scm]
version_file = "lava_common/_version.py"
local_scheme = "no-local-version"
tag_regex = "^(?P<version>[0-9]+\\.[0-9]+)$"

[tool.setuptools]
include-package-data = true
zip-safe = false
py-modules = ["manage"]

[tool.setuptools.packages.find]
include = [
    "lava*",
    "linaro_django_xmlrpc*",
]
exclude = ["tests*", "doc*"]

[tool.setuptools.package-data]
lava_common = ["VERSION"]
lava_dispatcher = [
    "dynamic_vm_keys/lava*",
    "lava_test_shell/**/*",
]
lava_rest_app = ["templates/**/*.html"]
lava_results_app = [
    "templates/**/*.html",
    "static/**/*",
]
lava_scheduler_app = [
    "templates/**/*.html",
    "templates/**/*.txt",
    "static/**/*",
]
lava_server = [
    "templates/**/*.html",
    "templates/robots.txt",
    "static/**/*",
]

# Pylint configuration
[tool.pylint.main]
jobs = 0  # Scale number of jobs to number of CPUs
init-hook = "import django; django.setup()"  # Fix django apps not being initialized
load-plugins = "pylint_django"
recursive = true
py-version = "3.9"  # Debian 11 (bullseye) Python version
disable = [
    "format",  # Formatting is handled by black and isort
    "design",
    "C0103",  # Method name doesn't conform to snake_case naming style
    "C0104",  # Disallowed name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
    "C0209",  # Formatting a regular string which could be an f-string
    "C0411",  # Wrong import order. This is handled by `isort --profile black`.
    "C0412",  # Imports from package %s are not grouped
    "C0415",  # Import outside toplevel
    "E0202",  # An attribute defined in %s line %s hides this method
    "E0307",  # __str__ does not return str
    "E0401",  # Unable to import '%s'
    "E0611",  # No name '%s' in module '%s'
    "E1101",  # Instance of x has no y member
    "E1136",  # Value is unsubscriptable
    "W1309",  # Using an f-string that does not have any interpolated variables
    "W1510",  # 'subprocess.run' used without explicitly defining the value for 'check'.
    "R0401",  # Cyclic import (%s -> %s)
    "R0801",  # Duplicate code
    "R1702",  # Too many nested blocks
    "R1705",  # Unnecessary "else" after "return"
    "R1710",  # Either all return statements in a function should return an expression,
              # or none of them should.
    "R1711",  # Useless return at end of function or method
    "R1720",  # Unnecessary "elif" after "raise"
    "R1723",  # Unnecessary "else" after "break"
    "R1724",  # Unnecessary "else" after "continue", remove the "else" and de-indent the code inside it
    "R1732",  # Consider using 'with' for resource-allocating operations
    "W0107",  # Unnecessary pass statement
    "W0201",  # Attribute defined outside __init__
    "W0212",  # Access to a protected member of a client class
    "W0221",  # Used when a method has a different number of arguments than
              # the implemented interface or in an overridden method.
    "W0223",  # Method is abstract in class but is not overridden in child class
    "W0237",  # Parameter has been renamed in overriding method
    "W0511",  # FIXME comments
    "W0603",  # Using the global statement
    "W0611",  # Unused import
    "W0612",  # Unused variable
    "W0613",  # Unused argument
    "W0621",  # Redefining name from outer scope
    "W0622",  # Redefining built-in
    "W0632",  # Possible unbalanced tuple unpacking
    "W0707",  # Consider explicitly re-raising using 'raise x from y'
    "W0718",  # Catching too general exception
    "W0719",  # Raising too general exception
    "W1115",  # Non-string value assigned
    "W1201",  # Use lazy % formatting in logging functions
    "W1203",  # Use lazy % or % formatting in logging functions
    "W1509",  # Using preexec_fn keyword which may be unsafe in the presence of threads
    "W1514",  # Using open without explicitly specifying an encoding
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pycodestyle]
max-line-length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
junit_family = "xunit2"

[tool.coverage.run]
source = [
    "lava_common",
    "lava_dispatcher",
    "lava_dispatcher_host",
    "lava_rest_app",
    "lava_results_app",
    "lava_scheduler_app",
    "lava_server",
    "linaro_django_xmlrpc",
]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
