# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2025 LAVA contributors
[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=66.1.1", "setuptools-scm>=7.1.0" ]

[project]
name = "lava"
description = """\
  LAVA is a continuous integration system for deploying operating systems onto physical and virtual hardware for \
  running tests.\
  """
readme = "README.md"
keywords = [ "automation", "ci", "continuous-integration", "embedded", "hardware", "testing" ]
license = { text = "GPL-2.0-or-later" }
maintainers = [ { name = "LAVA team", email = "lava-team@linaro.org" } ]
authors = [ { name = "LAVA team", email = "lava-team@linaro.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 6 - Mature",
  "Framework :: Django",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
]
dynamic = [ "version" ]
dependencies = [
  "pyyaml",
  "sentry-sdk",
  "voluptuous",
]
optional-dependencies.coordinator = []
optional-dependencies.dev = [
  "django-stubs",
  "djangorestframework-stubs",
  "lava[full]",
  "lava[test]",
  "mypy",
  "pre-commit==4.6.0",
  "pylint",
  "pylint-django",
  "pyproject-fmt==2.25.1",
  "pyrefly==1.1.1",
  "ruff==0.15.20",
  "ty==0.0.55",
  "types-pexpect",
  "types-pyyaml",
  "types-requests",
]
optional-dependencies.dispatcher = [
  "aiohttp",
  "configobj",
  "jinja2",
  "pexpect",
  "python-magic",
  "pyudev",
  "requests",
  "setproctitle",
]
optional-dependencies.dispatcher-host = [
  "jinja2",
  "pyudev",
  "requests",
]
optional-dependencies.docs = [
  "mkdocs-material",
  "pymdown-extensions",
]
optional-dependencies.full = [
  "lava[dispatcher]",
  "lava[server]",
]
optional-dependencies.server = [
  "aiohttp",
  "asgiref",
  "celery",
  "defusedxml",
  "django>=4.2,<5.0",
  "django-allauth",
  "django-environ",
  "django-filter",
  "django-tables2",
  "djangorestframework",
  "djangorestframework-filters>=1.0.0.dev2",
  "drf-extensions>=0.8.0",
  "gunicorn",
  "jinja2",
  "junit-xml",
  "more-itertools",
  "psycopg2-binary",
  "pyzmq",
  "requests",
  "tap-py",
  "whitenoise",
]
optional-dependencies.test = [
  "pytest>=7.0",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "pytest-mock",
  "pytest-random-order",
  "pytest-subtests",
  "responses",
]
urls.Documentation = "https://docs.lavasoftware.org"
urls.Homepage = "https://lavasoftware.org"
urls.Issues = "https://gitlab.com/lava/lava/-/issues"
urls.Repository = "https://gitlab.com/lava/lava"

# NOTE: package selection, py-modules and console scripts are deliberately
# NOT declared here. The Debian packaging builds each binary package by
# invoking setup.py once per component (see debian/rules), relying on the
# per-component "packages"/"scripts" lists in setup.py to split the source
# tree across lava-common, lava-dispatcher, lava-server, etc. Any of
# [tool.setuptools.packages.find], py-modules or [project.scripts] declared
# here would override those lists and end up installing every module/script
# into every Debian package.
[tool.setuptools]
include-package-data = true
package-data.lava_common = [ "VERSION" ]
package-data.lava_dispatcher = [
  "dynamic_vm_keys/lava*",
  "lava_test_shell/**/*",
]
package-data.lava_rest_app = [ "templates/**/*.html" ]
package-data.lava_results_app = [
  "static/**/*",
  "templates/**/*.html",
]
package-data.lava_scheduler_app = [
  "static/**/*",
  "templates/**/*.html",
  "templates/**/*.txt",
]
package-data.lava_server = [
  "static/**/*",
  "templates/**/*.html",
  "templates/robots.txt",
]
zip-safe = false

[tool.setuptools_scm]
version_file = "lava_common/_version.py"
local_scheme = "no-local-version"
tag_regex = "^(?P<version>[0-9]+\\.[0-9]+)$"

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
  # "B",   # flake8-bugbear
  # "E",   # pycodestyle errors
  # "F",   # pyflakes
  "I",  # isort
  # "SIM", # flake8-simplify
  "UP", # pyupgrade
  # "W",   # pycodestyle warnings
]
lint.ignore = [
  "E501",  # line too long (test data strings, URLs, commands)
  "F403",  # wildcard imports in Django settings are intentional
  "F405",  # undefined names from wildcard imports in Django settings
  "UP031", # use format specifiers instead of percent format
]

[tool.pylint]
main.disable = [
  "C0103",  # Method name doesn't conform to snake_case naming style
  "C0104",  # Disallowed name
  "C0114",  # Missing module docstring
  "C0115",  # Missing class docstring
  "C0116",  # Missing function or method docstring
  "C0209",  # Formatting a regular string which could be an f-string
  "C0411",  # Wrong import order. This is handled by `ruff`.
  "C0412",  # Imports from package %s are not grouped
  "C0415",  # Import outside toplevel
  "design",
  "E0202",  # An attribute defined in %s line %s hides this method
  "E0401",  # Unable to import '%s'
  "E1101",  # Instance of x has no y member
  "E5142",  # User model imported from django.contrib.auth.models (imported-auth-user)
  "format", # Formatting is handled by `ruff`
  "R0401",  # Cyclic import (%s -> %s)
  "R0801",  # Duplicate code
  "R1702",  # Too many nested blocks
  "R1705",  # Unnecessary "else" after "return"
  "R1710",  # Either all return statements in a function should return an expression,
  # or none of them should.
  "R1711",  # Useless return at end of function or method
  "R1720",  # Unnecessary "elif" after "raise"
  "R1723",  # Unnecessary "else" after "break"
  "R1724",  # Unnecessary "else" after "continue", remove the "else" and de-indent the code inside it
  "R1732",  # Consider using 'with' for resource-allocating operations
  "W0107",  # Unnecessary pass statement
  "W0201",  # Attribute defined outside __init__
  "W0212",  # Access to a protected member of a client class
  "W0221",  # Used when a method has a different number of arguments than
  # the implemented interface or in an overridden method.
  "W0223",  # Method is abstract in class but is not overridden in child class
  "W0237",  # Parameter has been renamed in overriding method
  "W0511",  # FIXME comments
  "W0603",  # Using the global statement
  "W0613",  # Unused argument
  "W0621",  # Redefining name from outer scope
  "W0622",  # Redefining built-in
  "W0632",  # Possible unbalanced tuple unpacking
  "W0707",  # Consider explicitly re-raising using 'raise x from y'
  "W0718",  # Catching too general exception
  "W0719",  # Raising too general exception
  "W1201",  # Use lazy % formatting in logging functions
  "W1203",  # Use lazy % or % formatting in logging functions
  "W1309",  # Using an f-string that does not have any interpolated variables
  "W1509",  # Using preexec_fn keyword which may be unsafe in the presence of threads
  "W1514",  # Using open without explicitly specifying an encoding
]
main.init-hook = """\
  import os, sys; os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'lava_server.settings.dev'); sys.path.insert(0, \
  os.getcwd()); import django; django.setup()\
  """  # Fix django apps not being initialized
# Pylint configuration
main.jobs = 0  # Scale number of jobs to number of CPUs
main.load-plugins = "pylint_django"
main.py-version = "3.11"  # Debian 12 (bookworm) Python version
main.recursive = true

[tool.codespell]
ignore-words-list = [ "distroname", "hart", "Hart", "Nd", "NotIn" ]
skip = [
  ".gitlab-ci/analyze/codespell.ignore",
  "debian/po/*.po",
  "doc/v2/images/*.svg",
  "lava_*/static/lava_*/js/*.js",
]

[tool.pyproject-fmt]
keep_full_version = true

# FIXME review the bandit issues
[tool.bandit]
skips = [
  "B102", # exec_used] Use of exec detected.
  "B104", # hardcoded_bind_all_interfaces] Possible binding to all interfaces.
  "B108", # hardcoded_tmp_directory] Probable insecure usage of temp file/directory.
  "B113", # request_without_timeout] Call to requests without timeout
  "B202", # tarfile_unsafe_members] tarfile.extractall used without any validation.
  "B307", # blacklist] Use of possibly insecure function - consider using safer ast.literal_eval.
  "B308", # blacklist] Use of mark_safe() may expose cross-site scripting vulnerabilities and should be reviewed.
  "B314", # blacklist] Using xml.etree.ElementTree.fromstring to parse untrusted XML data is known to be vulnerable to XML attacks. Replace xml.etree.ElementTree.fromstring with its defusedxml equivalent function or make sure defusedxml.defuse_stdlib() is called
  "B324", # hashlib] Use of weak MD5 hash for security. Consider usedforsecurity=False
  "B411", # blacklist] Using xmlrpc to parse untrusted XML data is known to be vulnerable to XML attacks. Use defusedxml.xmlrpc.monkey_patch() function to monkey-patch xmlrpclib and mitigate XML vulnerabilities.
  "B411", # blacklist] Using xmlrpc.client to parse untrusted XML data is known to be vulnerable to XML attacks. Use defusedxml.xmlrpc.monkey_patch() function to monkey-patch xmlrpclib and mitigate XML vulnerabilities.
  "B602", # subprocess_popen_with_shell_equals_true] subprocess call with shell=True identified, security issue.
  "B604", # any_other_function_with_shell_equals_true] Function call with shell=True parameter identified, possible security issue.
  "B610", # django_extra_used] Use of extra potential SQL attack vector.
  "B701", # jinja2_autoescape_false] By default, jinja2 sets autoescape to False. Consider using autoescape=True or use the select_autoescape function to mitigate XSS vulnerabilities.
  "B703", # django_mark_safe] Potential XSS on mark_safe function.
]

[tool.pyrefly]
errors.missing-import = false  # guestfs requires libguestfs-dev (C headers) not available in pre-commit env
check-unannotated-defs = true
infer-return-types = "never"
permissive-ignores = true
project-includes = [
  "lava_common/constants.py",
  "lava_common/converters.py",
  "lava_common/decorators.py",
  "lava_common/device_mappings.py",
  "lava_common/exceptions.py",
  "lava_common/jinja.py",
  "lava_common/log.py",
  "lava_common/timeout.py",
  "lava_common/utils.py",
  "lava_common/version.py",
  "lava_common/worker.py",
  "lava_common/yaml.py",
  "lava_dispatcher/action.py",
  "lava_dispatcher/actions/base_strategy.py",
  "lava_dispatcher/actions/boot_strategy.py",
  "lava_dispatcher/actions/deploy_strategy.py",
  "lava_dispatcher/actions/test/mixins.py",
  "lava_dispatcher/actions/test_strategy.py",
  "lava_dispatcher/connection.py",
  "lava_dispatcher/deployment_data.py",
  "lava_dispatcher/shell.py",
  "lava_dispatcher/utils/compression.py",
  "lava_dispatcher/utils/contextmanager.py",
  "lava_dispatcher/utils/decorator.py",
  "lava_dispatcher/utils/ext4.py",
  "lava_dispatcher/utils/filesystem.py",
  "lava_dispatcher/utils/installers.py",
  "lava_dispatcher/utils/network.py",
  "lava_dispatcher/utils/shell.py",
  "lava_dispatcher/utils/strings.py",
  "lava_dispatcher/utils/vcs.py",
  "lava_server/settings/config_file.py",
]

[tool.ty]
src.include = [
  "lava_common/constants.py",
  "lava_common/converters.py",
  "lava_common/decorators.py",
  "lava_common/device_mappings.py",
  "lava_common/exceptions.py",
  "lava_common/jinja.py",
  "lava_common/log.py",
  "lava_common/timeout.py",
  "lava_common/utils.py",
  "lava_common/version.py",
  "lava_common/worker.py",
  "lava_common/yaml.py",
  "lava_dispatcher/action.py",
  "lava_dispatcher/actions/base_strategy.py",
  "lava_dispatcher/actions/boot_strategy.py",
  "lava_dispatcher/actions/deploy_strategy.py",
  "lava_dispatcher/actions/test/mixins.py",
  "lava_dispatcher/actions/test_strategy.py",
  "lava_dispatcher/connection.py",
  "lava_dispatcher/deployment_data.py",
  "lava_dispatcher/shell.py",
  "lava_dispatcher/utils/compression.py",
  "lava_dispatcher/utils/contextmanager.py",
  "lava_dispatcher/utils/decorator.py",
  "lava_dispatcher/utils/ext4.py",
  "lava_dispatcher/utils/filesystem.py",
  "lava_dispatcher/utils/installers.py",
  "lava_dispatcher/utils/network.py",
  "lava_dispatcher/utils/shell.py",
  "lava_dispatcher/utils/strings.py",
  "lava_dispatcher/utils/vcs.py",
  "lava_server/settings/config_file.py",
]

[tool.pytest]
ini_options.junit_family = "xunit2"
ini_options.DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.coverage]
run.omit = [ "*/migrations/*", "*/tests/*" ]
run.source = [
  "lava_common",
  "lava_dispatcher",
  "lava_dispatcher_host",
  "lava_rest_app",
  "lava_results_app",
  "lava_scheduler_app",
  "lava_server",
  "linaro_django_xmlrpc",
]
report.exclude_lines = [
  "def __repr__",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.pycodestyle]
max-line-length = 88

[tool.djangofmt]
profile = "django"
