[metadata]
author = LAVA team
author_email = lava-team@linaro.org
license = GPLv2+
long_description =
  LAVA is a continuous integration system for deploying operating
  systems onto physical and virtual hardware for running tests.
  Tests can be simple boot testing, bootloader testing and system
  level testing. Extra hardware may be required for some
  system tests. Results are tracked over time and data can be
  exported for further analysis.
url = https://lavasoftware.org
version = attr: lava_common.version.__version__
platforms = linux
classifiers =
  Development Status :: 6 - Mature
  License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Testing

[options]
include_package_data = True
zip_safe = False
python_requires = >=3.5

[pycodestyle]
max-line-length = 88
